Tested for Neo4j